--- a/src/style.css
+++ b/src/style.css
@@ -6,4 +6,8 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    display: grid;
+    justify-content: center;
+    grid-template-rows: auto 1fr auto;
 }
