--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,23 @@
     box-sizing: border-box;
 }
 body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
     margin: 0;
     padding: 0;
     height: 100vh;
     display: grid;
     justify-content: center;
     grid-template-rows: auto 1fr auto;
+}
+input:invalid {
+    border: 2px solid red;
+}
+input:focus:invalid {
+    outline: 1px solid red;
+}
+input {
+    padding: 0.5rem;
+    border-radius: 0.5rem;
 }
