--- a/src/style.css
+++ b/src/style.css
@@ -27,14 +27,12 @@ input:invalid {
 input:focus:invalid {
     outline: 1px solid red;
 }
-input {
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-}
 input,
 select {
     border-color: #97d2fb;
     background-color: #e4fde1;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
 }
 select option:hover {
     background-color: #97d2fb;
@@ -67,7 +65,6 @@ footer {
     flex-direction: column;
     align-items: start;
     padding: 1rem;
-    gap: 1rem;
     > div {
         height: min-content;
         display: flex;
@@ -77,6 +74,11 @@ footer {
         margin: 0;
     }
 }
+.weather-info :nth-child(3) {
+    color: #97d2fb;
+    margin-bottom: 1rem;
+}
+
 .units-toggler {
     position: relative;
     margin-left: auto;
